trunk/Archive/8bf28daad0dbc933f8eb04d698b92b84-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:1:1: warning: character constant too long for its type [enabled by default]
 'Furrovine::optional_delete<TDx>::operator ()' : unable to match function definition to an existing declaration
 ^
main.cpp:3:13: warning: character constant too long for its type [enabled by default]
 1>          'void Furrovine::optional_delete<TDx>::operator ()(T *) const'
             ^
main.cpp:5:13: warning: character constant too long for its type [enabled by default]
 1>          'void Furrovine::optional_delete<TDx>::operator ()(T *) const'
             ^
main.cpp:1:1: error: expected unqualified-id before '\x72202829'
 'Furrovine::optional_delete<TDx>::operator ()' : unable to match function definition to an existing declaration
 ^
